2009-02-02  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in: create $DESTDIR$datadir/applications before 
	               installing desktop file into it

2009-02-01  Christopher Bratusek <zanghar@freenet.de>
	* MAINTAINERS: updated my mail address

	* autogen.sh
	* configure.in: intltoolize sawfish

	* po/LINGUAS: added

	* po/POTFILES.in: updated

	* po/Makefile.in
	* po/make-pot
	* po/sawfish.pot
	* po/sawfish-xgettext
	* po/update.sh
	* po/README: removed

	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/ext/tooltips.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/ext/audio-events.jl
	* lisp/sawfish/wm/ext/error-handler.jl
	* lisp/sawfish/wm/ext/shade-hover.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/ext/auto-raise.jl
	* lisp/sawfish/wm/workspace.jl
	* lisp/sawfish/wm/placement.jl
	* lisp/sawfish/wm/custom.jl
	* lisp/sawfish/wm/state/iconify.jl
	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/state/transient.jl
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/viewport.jl
	* lisp/sawfish/wm/window-anim.jl
	* lisp/sawfish/wm/windows.jl
	* lisp/sawfish/wm/commands/move-cursor.jl
	* lisp/sawfish/wm/commands/grow-pack.jl
	* lisp/sawfish/wm/commands/xterm.jl
	* lisp/sawfish/wm/commands/x-cycle.jl
	* lisp/sawfish/wm/commands/move-resize.jl
	* lisp/sawfish/wm/stacking.jl
	* lisp/sawfish/wm/placement/stagger.jl
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/util/prompt.jl
	* lisp/sawfish/wm/util/stacking.jl
	* lisp/sawfish/wm/util/play-audio.jl
	* lisp/sawfish/wm/util/display-window.jl
	* lisp/sawfish/wm/keymaps.jl: mark all translatable strings with (_ )

	* po/ne.po
	* po/sr@Latn.po
	* po/bs.po
	* po/cs.po
	* po/pt_BR.po
	* po/mk.po
	* po/es.po
	* po/wa.po
	* po/ko.po
	* po/eu.po
	* po/en_GB.po
	* po/hu.po
	* po/no.po
	* po/sk.po
	* po/vi.po
	* po/uk.po
	* po/ms.po
	* po/ro.po
	* po/ru.po
	* po/rw.po
	* po/nb.po
	* po/el.po
	* po/ar.po